# haskell-finance-toolbox

./: LICENSE  README.md  SKS-Finance-Pricing.cabal  haskell-finance-toolbox.cabal
src/Control/Monad/: Util.hs
src/Data/Array/Repa/: Util.hs
src/Data/Vector/: AddOns.hs
src/FFI/: Tools.hs
src/Numeric/: Integration.hs  Machine.hs  Root.hs  Util.hs  subsum.c
src/Numeric/Distribution/: GIG.hs  Normal.hi  Normal.hs  VarianceGamma.hs
src/Numeric/Interpolation/: Polynomial.hs  Spline.hs
src/Numeric/Knapsack/: SubSum.hs
src/Numeric/Optimization/: Brent1Dim.hs
src/Numeric/Polynomial/: ListPolynomial.hs  VectorPolynomial.hi  VectorPolynomial.hs
src/Pricing/: AmericanOptions.hs  BarrierOptions.hs  BlackScholes.hs  DigitalOptions.hs  Util.hs
src/Text/: CSV.hs
