name: haskell-finance-toolbox
version: 0.1.0.0
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
maintainer: torsten.kemps-benedix@sks-ub.de
synopsis: Various algorithms for quantitative finance.
author: Torsten Kemps-Benedix

library
    build-depends: base, containers, array, parsec, vector, parallel, mtl,
        erf, containers, array, statistics, hmatrix, hmatrix-special, hmatrix-gsl, primitive, random-source, random-fu, repa, splines
    if os(osx)
        extra-lib-dirs: /usr/lib
    exposed-modules: Control.Monad.Util,Data.Array.Repa.Util,Data.Vector.AddOns,Numeric.Distribution.Normal,Numeric.Distribution.GIG,Numeric.Distribution.VarianceGamma,Numeric.Integration,Numeric.Root,Numeric.Polynomial.ListPolynomial,Numeric.Polynomial.VectorPolynomial,Numeric.Util,Numeric.Knapsack.SubSum,Numeric.Interpolation.Polynomial,Numeric.Interpolation.Spline,Pricing.BlackScholes,Pricing.AmericanOptions,Pricing.Util
    ghc-options: -O2
    exposed: True
    buildable: True
    hs-source-dirs: src
